[package]
name = "Geo Clock"
version = "1.0.0"
edition = "2025"
license = "MIT OR Apache-2.0"
description = "Display time as calculated by your longitude"
homepage = ""
repository = ""
readme = "README.md"

[dependencies]
chrono = "0.4.40"
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
